--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
 
   <body>
     <header class="header">
-      <nav class="header-nav">
-        <a href="./index.html" class="logo"
-          >Web<span class="header-logo-color">Studio</span></a
-        >
+      
+      <div class="container container-header">
 
+      <a href="./index.html" class="logo"
+          >Web<span class="header-logo-color">Studio</span></a>
+      
+      <nav class="header-nav">
         <ul class="header-list-nav">
           <li class="header-nav-item">
             <a class="header-link-nav" href="./index.html">Studio</a>
@@ -50,22 +52,26 @@
           </li>
         </ul>
       </address>
+    </div>
     </header>
 
     <main>
       <!-- #region section 1 -->
       <section class="section-hero">
+      <div class="container container-hero">
         <h1 class="section-hero-title">
           Effective Solutions for Your Business
         </h1>
         <button type="button" class="section-hero-button">Order Service</button>
+      </div>
       </section>
       <!-- #endregion section 1 -->
 
       <!-- #region section 2 -->
 
       <section class="section-feature">
-        <h2 hidden>Feature</h2>
+        <div class="container container-feature">
+        <h2 class="visually-hidden">Feature</h2>
         <ul class="section-feature-list">
           <li class="section-feature-item">
             <h3 class="section-feature-title">Strategy</h3>
@@ -96,6 +102,7 @@
             </p>
           </li>
         </ul>
+        </div>
       </section>
 
       <!-- #endregion section 2 -->
