--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 
       <!-- #region section 3 -->
       <section class="section-team">
+      <div class="container container-team">
         <h2 class="section-team-title">Our Team</h2>
 
         <ul class="section-team-list">
@@ -153,6 +154,7 @@
             <p class="section-team-text">UI Designer</p>
           </li>
         </ul>
+      </div>
       </section>
 
       <!-- #endregion section 3 -->
