--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
 
       <!-- #region section 4 -->
       <section class="section-portfolio">
+        <div class="container container-portfolio">
         <h2 class="section-portfolio-title">Our Portfolio</h2>
 
         <ul class="section-portfolio-list">
@@ -215,12 +216,14 @@
             <p class="section-portfolio-text">Marketing</p>
           </li>
         </ul>
+      </div>
       </section>
 
       <!-- #endregion section 3 -->
     </main>
 
     <footer class="footer">
+      <div class="container container-footer">
       <a class="logo" href="./index.html"
         >Web<span class="footer-logo-color">Studio</span></a
       >
@@ -228,6 +231,7 @@
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
+    </div>
     </footer>
   </body>
 </html>
