--- a/index.html
+++ b/index.html
@@ -1,30 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Effective Solutions</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./css/style.css" />
-  </head>
 
-  <body>
-    <header class="header">
-      
-      <div class="container container-header">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Effective Solutions</title>
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@100..900&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="./css/style.css" />
+</head>
 
-      <a href="./index.html" class="logo"
-          >Web<span class="header-logo-color">Studio</span></a>
-      
+<body>
+  <header class="header">
+
+    <div class="container container-header">
+
+      <a href="./index.html" class="logo">Web<span class="header-logo-color">Studio</span></a>
+
       <nav class="header-nav">
         <ul class="header-list-nav">
           <li class="header-nav-item">
@@ -41,36 +37,32 @@
       <address class="header-address">
         <ul class="header-list-address">
           <li class="header-address-item">
-            <a class="header-address-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+            <a class="header-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li class="header-address-item">
-            <a class="header-address-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
+            <a class="header-address-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
     </div>
-    </header>
+  </header>
 
-    <main>
-      <!-- #region section 1 -->
-      <section class="section-hero">
+  <main>
+    <!-- #region section 1 -->
+    <section class="section-hero">
       <div class="container container-hero">
         <h1 class="section-hero-title">
           Effective Solutions for Your Business
         </h1>
         <button type="button" class="section-hero-button">Order Service</button>
       </div>
-      </section>
-      <!-- #endregion section 1 -->
+    </section>
+    <!-- #endregion section 1 -->
 
-      <!-- #region section 2 -->
+    <!-- #region section 2 -->
 
-      <section class="section-feature">
-        <div class="container container-feature">
+    <section class="section-feature">
+      <div class="container container-feature">
         <h2 class="visually-hidden">Feature</h2>
         <ul class="section-feature-list">
           <li class="section-feature-item">
@@ -102,66 +94,46 @@
             </p>
           </li>
         </ul>
-        </div>
-      </section>
+      </div>
+    </section>
 
-      <!-- #endregion section 2 -->
+    <!-- #endregion section 2 -->
 
-      <!-- #region section 3 -->
-      <section class="section-team">
+    <!-- #region section 3 -->
+    <section class="section-team">
       <div class="container container-team">
         <h2 class="section-team-title">Our Team</h2>
 
         <ul class="section-team-list">
           <li class="section-team-item">
-            <img
-              class="section-team-img"
-              src="./images/mark.jpg"
-              alt="mark-guerrero"
-              width="264"
-            />
+            <img class="section-team-img" src="./images/mark.jpg" alt="mark-guerrero" width="264" />
             <h3 class="section-team-subtitle">Mark Guerrero</h3>
             <p class="section-team-text">Product Designer</p>
           </li>
           <li class="section-team-item">
-            <img
-              class="section-team-img"
-              src="./images/tom.jpg"
-              alt="tom-ford"
-              width="264"
-            />
+            <img class="section-team-img" src="./images/tom.jpg" alt="tom-ford" width="264" />
             <h3 class="section-team-subtitle">Tom Ford</h3>
             <p class="section-team-text">Frontend Developer</p>
           </li>
           <li class="section-team-item">
-            <img
-              class="section-team-img"
-              src="./images/camila.jpg"
-              alt="camila-garcia"
-              width="264"
-            />
+            <img class="section-team-img" src="./images/camila.jpg" alt="camila-garcia" width="264" />
             <h3 class="section-team-subtitle">Camila Garcia</h3>
             <p class="section-team-text">Marketing</p>
           </li>
           <li class="section-team-item">
-            <img
-              class="section-team-img"
-              src="./images/daniel.jpg"
-              alt="daniel-wilson"
-              width="264"
-            />
+            <img class="section-team-img" src="./images/daniel.jpg" alt="daniel-wilson" width="264" />
             <h3 class="section-team-subtitle">Daniel Wilson</h3>
             <p class="section-team-text">UI Designer</p>
           </li>
         </ul>
       </div>
-      </section>
+    </section>
 
-      <!-- #endregion section 3 -->
+    <!-- #endregion section 3 -->
 
-      <!-- #region section 4 -->
-      <section class="section-portfolio">
-        <div class="container container-portfolio">
+    <!-- #region section 4 -->
+    <section class="section-portfolio">
+      <div class="container container-portfolio">
         <h2 class="section-portfolio-title">Our Portfolio</h2>
 
         <ul class="section-portfolio-list">
@@ -171,67 +143,46 @@
             <p class="section-portfolio-text">App</p>
           </li>
           <li class="section-portfolio-item">
-            <img
-              src="./images/cashless-payment.jpg"
-              alt="cashless-payment"
-              width="360"
-            />
+            <img src="./images/cashless-payment.jpg" alt="cashless-payment" width="360" />
             <h3 class="section-portfolio-subtitle">Cashless Payment</h3>
             <p class="section-portfolio-text">Marketing</p>
           </li>
           <li class="section-portfolio-item">
-            <img
-              src="./images/meditation-app.jpg"
-              alt="meditation-app"
-              width="360"
-            />
+            <img src="./images/meditation-app.jpg" alt="meditation-app" width="360" />
             <h3 class="section-portfolio-subtitle">Meditation App</h3>
             <p class="section-portfolio-text">App</p>
           </li>
           <li class="section-portfolio-item">
-            <img
-              src="./images/taxi-service.jpg"
-              alt="taxi-service"
-              width="360"
-            />
+            <img src="./images/taxi-service.jpg" alt="taxi-service" width="360" />
             <h3 class="section-portfolio-subtitle">Taxi Service</h3>
             <p class="section-portfolio-text">Marketing</p>
           </li>
           <li class="section-portfolio-item">
-            <img
-              src="./images/screen-illustrations.jpg"
-              alt="screen-illustrations"
-              width="360"
-            />
+            <img src="./images/screen-illustrations.jpg" alt="screen-illustrations" width="360" />
             <h3 class="section-portfolio-subtitle">Screen Illustrations</h3>
             <p class="section-portfolio-text">Design</p>
           </li>
           <li class="section-portfolio-item">
-            <img
-              src="./images/online-courses.jpg"
-              alt="online-courses"
-              width="360"
-            />
+            <img src="./images/online-courses.jpg" alt="online-courses" width="360" />
             <h3 class="section-portfolio-subtitle">Online Courses</h3>
             <p class="section-portfolio-text">Marketing</p>
           </li>
         </ul>
       </div>
-      </section>
+    </section>
 
-      <!-- #endregion section 3 -->
-    </main>
+    <!-- #endregion section 3 -->
+  </main>
 
-    <footer class="footer">
-      <div class="container container-footer">
-      <a class="logo" href="./index.html"
-        >Web<span class="footer-logo-color">Studio</span></a
-      >
+  <footer class="footer">
+    <div class="container container-footer">
+      <a class="logo" href="./index.html">Web<span class="footer-logo-color">Studio</span></a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
     </div>
-    </footer>
-  </body>
+  </footer>
+</body>
+
 </html>
