--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="container container-header">
 
-      <a href="./index.html" class="logo">Web<span class="header-logo-color">Studio</span></a>
+      <a href="./index.html" class="logo logo-header">Web<span class="header-logo-color">Studio</span></a>
 
       <nav class="header-nav">
         <ul class="header-list-nav">
@@ -176,7 +176,7 @@
 
   <footer class="footer">
     <div class="container container-footer">
-      <a class="logo" href="./index.html">Web<span class="footer-logo-color">Studio</span></a>
+      <a class="logo logo-footer" href="./index.html">Web<span class="footer-logo-color">Studio</span></a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
