--- a/index.html
+++ b/index.html
@@ -107,23 +107,31 @@
         <ul class="section-team-list">
           <li class="section-team-item">
             <img class="section-team-img" src="./images/mark.jpg" alt="mark-guerrero" width="264" />
+            <div class="team-card-title">
             <h3 class="section-team-subtitle">Mark Guerrero</h3>
             <p class="section-team-text">Product Designer</p>
+          </div>
           </li>
           <li class="section-team-item">
             <img class="section-team-img" src="./images/tom.jpg" alt="tom-ford" width="264" />
+          <div class="team-card-title">
             <h3 class="section-team-subtitle">Tom Ford</h3>
             <p class="section-team-text">Frontend Developer</p>
+          </div>
           </li>
           <li class="section-team-item">
             <img class="section-team-img" src="./images/camila.jpg" alt="camila-garcia" width="264" />
+            <div class="team-card-title">
             <h3 class="section-team-subtitle">Camila Garcia</h3>
             <p class="section-team-text">Marketing</p>
+            </div>
           </li>
           <li class="section-team-item">
             <img class="section-team-img" src="./images/daniel.jpg" alt="daniel-wilson" width="264" />
+            <div class="team-card-title">
             <h3 class="section-team-subtitle">Daniel Wilson</h3>
             <p class="section-team-text">UI Designer</p>
+            </div>
           </li>
         </ul>
       </div>
