--- a/index.html
+++ b/index.html
@@ -147,33 +147,45 @@
         <ul class="section-portfolio-list">
           <li class="section-portfolio-item">
             <img src="./images/banking-app.jpg" alt="banking-app" width="360" />
+            <div class="portfolio-subtitle-container">
             <h3 class="section-portfolio-subtitle">Banking App</h3>
             <p class="section-portfolio-text">App</p>
+            </div>
           </li>
           <li class="section-portfolio-item">
             <img src="./images/cashless-payment.jpg" alt="cashless-payment" width="360" />
+            <div class="portfolio-subtitle-container">
             <h3 class="section-portfolio-subtitle">Cashless Payment</h3>
             <p class="section-portfolio-text">Marketing</p>
+            </div>
           </li>
           <li class="section-portfolio-item">
             <img src="./images/meditation-app.jpg" alt="meditation-app" width="360" />
+            <div class="portfolio-subtitle-container">
             <h3 class="section-portfolio-subtitle">Meditation App</h3>
             <p class="section-portfolio-text">App</p>
+            </div>
           </li>
           <li class="section-portfolio-item">
             <img src="./images/taxi-service.jpg" alt="taxi-service" width="360" />
+            <div class="portfolio-subtitle-container">
             <h3 class="section-portfolio-subtitle">Taxi Service</h3>
             <p class="section-portfolio-text">Marketing</p>
+            </div>
           </li>
           <li class="section-portfolio-item">
             <img src="./images/screen-illustrations.jpg" alt="screen-illustrations" width="360" />
+          <div class="portfolio-subtitle-container">
             <h3 class="section-portfolio-subtitle">Screen Illustrations</h3>
             <p class="section-portfolio-text">Design</p>
+          </div>
           </li>
           <li class="section-portfolio-item">
             <img src="./images/online-courses.jpg" alt="online-courses" width="360" />
+            <div class="portfolio-subtitle-container">
             <h3 class="section-portfolio-subtitle">Online Courses</h3>
             <p class="section-portfolio-text">Marketing</p>
+            </div>
           </li>
         </ul>
       </div>
